# native-java-experiments

./: Readme.md  native-java.code-workspace
jni-library/: CMakeLists.txt  jni-library.c
simple-c-app/: CMakeLists.txt  main.c
simple-foreign/: pom.xml  run-app-native.sh  run-app.sh
simple-foreign/src/main/java/dev/lofthouse/: App.java
simple-foreign/src/main/java/dev/lofthouse/graal/: ForeignRegistrationFeature.java
simple-foreign/src/test/java/dev/lofthouse/: AppTest.java
simple-jni/: pom.xml  run-app-native.sh  run-app.sh
simple-jni/src/main/java/dev/lofthouse/: App.java
simple-library/: CMakeLists.txt  simple-library.c  simple-library.h
